fixed sticky footer on ie

--- a/src/main/webapp/styles/eprtr-custom.css
+++ b/src/main/webapp/styles/eprtr-custom.css
@@ -656,7 +656,7 @@ body {
 
 body > #container {
   width: 100%;
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 .footer {
